[gd_scene load_steps=14 format=2]

[ext_resource path="res://basquete_main.gd" type="Script" id=1]
[ext_resource path="res://basquete/pixil-frame-0 (7).png" type="Texture" id=2]
[ext_resource path="res://basquete/download-removebg-preview.png" type="Texture" id=3]
[ext_resource path="res://Assets/fonts/m6x11.ttf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 947.989, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.3147, 611.352 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 63.5105, 40.175 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 0.43103, -12.8408 )
b = Vector2( 25.1185, 41.7943 )

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( 29.7178, -52.0339 )
b = Vector2( 47.457, -112.452 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 13.0156, 853.992 )

[sub_resource type="PhysicsMaterial" id=7]
bounce = 0.71

[sub_resource type="CircleShape2D" id=8]
radius = 11.9919

[sub_resource type="DynamicFont" id=9]
size = 64
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.0308762 ],
"_edit_vertical_guides_": [ -114.825, 0.327759 ]
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 461.282, 667.868 )
scale = Vector2( 0.55, 0.55 )
__meta__ = {
"_edit_group_": true
}

[node name="pixil-frame-0 (7)" type="Sprite" parent="StaticBody2D"]
position = Vector2( -297.893, -519.455 )
scale = Vector2( 1.81818, 1.81818 )
texture = ExtResource( 2 )

[node name="ground" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -158.362, -386.855 )
shape = SubResource( 1 )

[node name="wall" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 787.431, -777.209 )
shape = SubResource( 2 )

[node name="cesta" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 615.657, -910.702 )
rotation = 0.127409
shape = SubResource( 3 )

[node name="rede" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 468.39, -843.028 )
shape = SubResource( 4 )

[node name="rede2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 524.332, -750.281 )
shape = SubResource( 5 )

[node name="wall2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -926.541, -436.74 )
shape = SubResource( 6 )

[node name="bodyball" type="RigidBody2D" parent="."]
position = Vector2( 319.973, 61.3518 )
physics_material_override = SubResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="bola" type="Sprite" parent="bodyball"]
position = Vector2( 423.717, 117.886 )
scale = Vector2( 0.287888, 0.292878 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bodyball"]
position = Vector2( 423.801, 117.827 )
shape = SubResource( 8 )

[node name="Node2D" type="Node2D" parent="."]

[node name="forceslide" type="VSlider" parent="Node2D"]
margin_left = 12.2703
margin_top = 83.0609
margin_right = 120.27
margin_bottom = 250.061
max_value = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="angleslide" type="VSlider" parent="Node2D"]
margin_left = 29.2203
margin_top = 83.755
margin_right = 58.2203
margin_bottom = 247.755
max_value = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="botaoJogar" type="Button" parent="."]
margin_left = 803.237
margin_top = 4.71938
margin_right = 885.237
margin_bottom = 53.7194
text = "jogar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_play_again" type="Button" parent="."]
margin_left = 145.357
margin_top = 372.83
margin_right = 264.357
margin_bottom = 403.83
text = "jogar novamente"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_get_out" type="Button" parent="."]
margin_left = 281.168
margin_top = 372.888
margin_right = 387.168
margin_bottom = 404.888
text = "voltar ao mapa"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayMessage" type="Label" parent="."]
margin_left = -275.453
margin_top = -0.365623
margin_right = 436.547
margin_bottom = 114.634
custom_fonts/font = SubResource( 9 )
text = "Points:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayMessage2" type="Label" parent="."]
margin_left = -148.029
margin_top = 2.466
margin_right = 563.971
margin_bottom = 117.466
custom_fonts/font = SubResource( 9 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="botaoJogar" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="button_play_again" to="." method="_on_button_play_again_pressed"]
[connection signal="pressed" from="button_get_out" to="." method="_on_button_get_out_pressed"]
